Fixed alignment of grid with bootstrap

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,4 @@
 img {
-    width: 250px;
+    width: 280px;
     height: auto;
 }
